/*
 * The MIT License
 *
 * Copyright 2017-2018 Norwegian University of Technology (NTNU)
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING  FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 */

syntax = "proto3";

package no.mechatronics.sfi.fmuproxy.grpc;

import "google/protobuf/empty.proto";
import "definitions.proto";

service FmuService {

    rpc GetModelDescriptionXml(google.protobuf.Empty) returns (Str);
	rpc GetModelDescription(google.protobuf.Empty) returns (ModelDescription);

    rpc CreateInstanceFromCS (google.protobuf.Empty) returns (UInt);
	rpc CreateInstanceFromME (Integrator) returns (UInt);

    //instance methods

    rpc GetCurrentTime (UInt) returns (Real);
    rpc IsTerminated (UInt) returns (Bool);

    rpc CanGetAndSetFMUstate(UInt) returns (Bool);

    rpc Init (InitRequest) returns (Status);
    rpc Step (StepRequest) returns (Status);
    rpc Terminate (UInt) returns (Status);
    rpc Reset(UInt) returns (Status);

    rpc ReadInteger (ReadRequest) returns (IntRead);
	rpc ReadReal (ReadRequest) returns (RealRead);
	rpc ReadString (ReadRequest) returns (StrRead);
	rpc ReadBoolean (ReadRequest) returns (BoolRead);
	
	rpc BulkReadInteger (BulkReadRequest) returns (IntListRead);
	rpc BulkReadReal (BulkReadRequest) returns (RealListRead);
	rpc BulkReadString (BulkReadRequest) returns (StrListRead);
	rpc BulkReadBoolean (BulkReadRequest) returns (BoolListRead);
	
    rpc WriteInteger (WriteIntRequest) returns (Status);
	rpc WriteReal (WriteRealRequest) returns (Status);
	rpc WriteString (WriteStrRequest) returns (Status);
	rpc WriteBoolean (WriteBoolRequest) returns (Status);
	
	rpc BulkWriteInteger (BulkWriteIntRequest) returns (Status);
	rpc BulkWriteReal (BulkWriteRealRequest) returns (Status);
	rpc BulkWriteString (BulkWriteStrRequest) returns (Status);
	rpc BulkWriteBoolean (BulkWriteBoolRequest) returns (Status);

}
